--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,10 +37,10 @@
         <h5><%= t("layouts.application.subscriptions") %></h5>
 
         <p>
-          <a href="https://www.twitter.com/rubyjobsru">
+          <a href="https://www.twitter.com/ru_mobilejobs">
             <span class="label label-info">Twitter</span>
           </a>
-          <a href="http://feeds.feedburner.com/rubyjobsru">
+          <a href="http://feeds.feedburner.com/ru_mobilejobs">
             <span class="label label-warning">RSS</span>
           </a>
         </p>
@@ -67,9 +67,6 @@
         &copy;&nbsp;2008&mdash;2015<br/>
         <%= link_to "Alex Sulim", "http://sul.im" %>
       </p>
-    </div>
-    <div class="span4 offset2">
-      <%= link_to image_tag('digitalocean-badge-gray.png', :size => '140x39'), 'http://www.digitalocean.com?utm_source=rubyjobs.ru' %>
     </div>
     <nav class="span4">
       <ul class="pull-right">
