--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,8 @@
                         id:33218308,
                         clickmap:true,
                         trackLinks:true,
-                        accurateTrackBounce:true
+                        accurateTrackBounce:true,
+                        webvisor:true
                     });
                 } catch(e) { }
             });
