Fix moi krug parser

--- a/app/views/vacancies/show.html.erb
+++ b/app/views/vacancies/show.html.erb
@@ -47,7 +47,7 @@
         <% if isEmail(@vacancy.email) %>
             <%= mail_to @vacancy.email, nil, :encode => "hex", :replace_at => "[at]" %>
         <% else %>
-            <%= @vacancy.email %>
+            <%= link_to @vacancy.company, @vacancy.email, :rel => 'nofollow' %>
         <% end %>
       </address>
     </div>
