Add google serachconsole tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <meta name="description" content="<%= t(".meta_description") %>"/>
   <meta name="keywords" content="<%= t(".meta_keywords") %>"/>
   <title><%= yield(:meta_title) %></title>
+  <meta name="google-site-verification" content="mRF4-eUmJfkHyuNFPat3EiXUAEUN3C3VbWJ7_DFAjOA" />
   <%= stylesheet_link_tag "application" %>
   <%= csrf_meta_tags %>
   <%= auto_discovery_link_tag :rss,
