Upgrade to bootstrap 3. fix 3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
   </footer>
 </div>
 
-<%= javascript_include_tag "application" %>
+<%= javascript_include_tag "application", :async => true %>
 <%= yield(:js) %>
 <% if Rails.env.production? %>
     <!-- Google.Analytics counter -->
