--- a/app/views/vacancies/show.html.erb
+++ b/app/views/vacancies/show.html.erb
@@ -26,7 +26,7 @@
   </div>
   <%= @vacancy.description_html.html_safe %>
   <div class="row">
-    <div class="span3">
+    <div class="col-lg-3 col-md-3">
       <address>
         <strong><%= t(".company") %></strong><br />
         <%= @vacancy.company %><br />
@@ -38,7 +38,7 @@
         <% end %>
       </address>
     </div>
-    <div class="span3">
+    <div class="col-lg-3 col-md-3">
       <address>
         <strong><%= t(".contacts") %></strong><br />
         <% unless @vacancy.name.blank? %>
@@ -51,7 +51,7 @@
         <% end %>
       </address>
     </div>
-     <div class="span2">
+     <div class="col-lg-2 col-md-2">
       <strong><%= t(".share_links") %></strong><br />
       <ul class="share-buttons">
         <li>
